# wikipedia-client

./: LICENSE  README.md  pyproject.toml  requirements.txt
wikipedia/: __init__.py  cache.py  client.py  core.py  links.py  page.py  table.py  template.py
wikipedia/cache/: __init__.py  cache.py  db.py  dbm.py  fs.py  sqlite.py
wikipedia/parser/: __init__.py  core.py  links.py  lists.py  sections.py  tables.py  templates.py  wikitext.py
